# api-read-ocr

./: README.md  pyproject.toml
src/: app.py
