[tool.poetry]
name = "api-read-ocr"
version = "0.1.0"
description = "API para leitura de documentos usando OCR e com distribuição de carga através do Celery"
authors = ["Jonathan W."]
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.2"}


[tool.taskipy.tasks]
dev = 'fastapi dev src/app.py --host 0.0.0.0 --port 8001'
test = 'pytest -s --cov=./src -x -vv'
lint = 'ruff check ./src; ruff check . --diff'
format = 'ruff check ./src --fix; ruff format .'
pre_test = 'task lint'
post_test = 'coverage html'


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
mkdocs = "^1.6.0"
taskipy = "^1.13.0"
pytest-cov = "^5.0.0"
ruff = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
